...
            OutlinedTextField(
                value = textFieldValue,
                onValueChange = { textFieldValue = it },
                modifier = Modifier
                    .weight(1F)
                    .focusRequester(textFieldFocusRequester)
                    .testTag("coefficient"),
                textStyle = MaterialTheme.typography.bodyLarge,
                placeholder = {
                    Text(
                        text = stringResource(R.string.coefficient),
                        style = MaterialTheme.typography.bodyLarge
                    )
...
                        context.getString(R.string.enter_correct_coefficient), Toast.LENGTH_SHORT
                    ).show()
                },
                modifier = Modifier
                    .weight(1F)
                    .height(larger)
                    .testTag("ingredients_recalc_button"),
                shape = MaterialTheme.shapes.extraSmall,
                colors = ButtonDefaults.textButtonColors(
                    contentColor = MaterialTheme.colorScheme.onPrimary,
                    containerColor = MaterialTheme.colorScheme.primary
                )
            ) {
...
