...
                        .padding(smaller),
                    text = stringResource(id = R.string.ingredients),
                    style = MaterialTheme.typography.headlineSmall
                )
                if (onClickRecalc != null) {
                    IconButton(
                        modifier = Modifier.testTag("recalc_button"),
                        onClick = onClickRecalc,
                        colors = IconButtonDefaults.iconButtonColors(contentColor = MaterialTheme.colorScheme.tertiaryContainer)
                    ) {
                        Icon(
                            painter = painterResource(R.drawable.ic_calculate),
                            contentDescription = null
...
